# claudia

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  analyze.py  config.py  main.py  pyproject.toml  requirements.txt  scores.py  scoring.py  sfx.py
.claude/: CLAUDE.md
assets/songs/: Acid Minute Circuit.crazy.chart.json  Acid Minute Circuit.easy.chart.json  Acid Minute Circuit.hard.chart.json  Midnight Teeth.crazy.chart.json  Midnight Teeth.easy.chart.json  Midnight Teeth.hard.chart.json  ORCH5 Impact.crazy.chart.json  ORCH5 Impact.easy.chart.json  ORCH5 Impact.hard.chart.json  Turbo Kolo Drop.crazy.chart.json  Turbo Kolo Drop.easy.chart.json  Turbo Kolo Drop.hard.chart.json
docs/: CREDITS.md  LICENSE  README.md
openspec/: audit-criteria.md  config.yaml
openspec/changes/archive/2026-03-20-add-terminal-responsive-scaling/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-20-add-terminal-responsive-scaling/specs/terminal-scaling/: spec.md
openspec/changes/archive/2026-03-20-fix-cross-platform-input/: design.md  proposal.md  tasks.md
openspec/specs/unix-input/: spec.md
src/: analyze.py  config.py  layout.py  scores.py  sfx.py  test_layout.py  test_scoring.py  theme.py
